# DocQA

./: .gitignore  DocQA.drawio  README.md  roadmap.md
.roo/rules/: rules.md
deployment/: .env  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
docs/: testing_guide.md
plans/: project_structure_plan.md
src/dataclasses/: embedding.py
src/helpers/: configs_hub.py  health_checks.py  models_management.py  ollama_management.py  qdrant_management.py
src/logging/: logger.py
src/managers/: qdrant.py
src/processors/: document.py  parsers.py
src/services/: indexer.py  ollama.py  query.py
src/web/: __init__.py  app.py  main.py
src/web/api/: __init__.py  router.py
src/web/api/v1/: __init__.py  router.py
src/web/api/v1/routes/: documents.py  embedding.py  health.py  meta.py  ollama.py  qdrant.py  query.py
src/web/middlewares/: error_handler.py
src/web/models/: enums.py  query_models.py
tests/: conftest.py  pdf.py  test_api.py
